# fakecygpty

./: Makefile.am  README.md  configure.ac  fakecygpty.c  fakecygpty.el  qkill.c  sighelper.c  sigqueue.c
